--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 sudo: false
 language: ruby
+bundler_args: --without tools
+cache: bundler
 rvm:
-  - 2.2.2
-  - 2.3.0
+  - 1.9.3
+  - 2.0
+  - 2.1
+  - 2.2
+  - jruby
+  - ruby-head
 before_install: gem install bundler -v 1.12.5
+matrix:
+  allow_failures:
+    - rvm: ruby-head
